# sc_position_copy

./: .clang-format  CMakeLists.txt  LICENSE  README.md  README.org  mypy.ini  requirements-dev.txt  requirements.txt  setup.cfg
cmake/: ConfigureCompiler.cmake
dev/: design.md  design.org
dev/scripts/: ib_position_copy.py  reload_dll.py
include/soso/: sc_position_copy.hpp
include/soso/sc_position_copy/: primary.hpp  secondary.hpp
src/: BuildBoost.cmake  CMakeLists.txt  sc_position_copy.cpp
src/primary/: CMakeLists.txt  primary.cpp  primary.hpp  sc_position_copy.cpp
src/secondary/: CMakeLists.txt  sc_position_copy.cpp  secondary.cpp  secondary.hpp
test/: CMakeLists.txt  test_sc_position_copy.cpp
test/primary/: CMakeLists.txt  test_primary.cpp  test_sc_position_copy_primary.cpp
test/secondary/: CMakeLists.txt  test_sc_position_copy_secondary.cpp  test_secondary.cpp
